--- a/public/home.html
+++ b/public/home.html
@@ -82,6 +82,11 @@
 		</div>
 	</form>
 </div>
+	{% if context1 %}
+	<div class="p-3 col-md-12"  style="background-color: rgb(36, 6, 6); text-align: center; color: rgb(247, 241, 241);" >
+	{{context1}}
+</div>
+	{% endif %}
 <div class="p-3"></div>
     {% if context %}
     <div class="row">
